GPU subdivision: Crash on select in Edit Mode with X-Ray on and Mirror Modifier #96344

Closed
opened 2022-03-11 18:24:33 +01:00 by Yannick Grimault · 52 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce RTX 2080
(I also tested on my laptop with a worse graphics card, same issue happened so I've deemed the system to not be the issue)

Blender Version
Broken: 3.1.0 (commit c77597cd0e15?)

Short description and steps to reproduce the error
Crash on select in Edit Mode, with X-Ray on, Subdiv Surface Modifier (with On Cage), and Mirror Modifier

Steps to Reproduce

  • Open Blender
  • Delete default objects (camera, light, cube) to have an empty scene (I could also reproduce the bug with this scene by applying things on the cube, but the simpler the better)
  • Shift-A -> Mesh -> Plane (to create new object)
  • Add modifier -> Mirror
  • Add modifier -> Subdivision Surface
  • Activate "OnCage" for Subdivision Surface modifier
  • Go to Edit Mode (Tab)
  • Activate X-Ray (Alt-Z)
  • Click anywhere in the view, and see Blender closing without warning/error.

Note that Blender was not crashing in any of these instances:

  • Mirror modifier is after Subdivision Surface modifier
  • OnCage was not activated for Subdivision Surface modifier
  • I was in Object Mode
  • X-Ray was disabled

I saved a simple project, if I try to click in the view after opening it, Blender will crash. But right after I saved it (as new project), it was not crashing (it did once I re-opened it, or when I simply hit Ctrl-S).
Crashing project.blend

Found in my temp folder:
blender.crash.txt

Stack trace:
blender.exe         :0x00007FF6FD2C5640  mesh_render_data_face_flag
blender.exe         :0x00007FF6FD2CD8F0  blender::draw::extract_edit_data_iter_subdiv_bm
blender.exe         :0x00007FF6FD288120  blender::draw::mesh_buffer_cache_create_requested_subdiv
blender.exe         :0x00007FF6FD2439D0  draw_subdiv_create_requested_buffers
blender.exe         :0x00007FF6FD244850  DRW_create_subdivision
blender.exe         :0x00007FF6FD270EC0  DRW_mesh_batch_cache_create_requested
blender.exe         :0x00007FF6FD267C30  drw_batch_cache_generate_requested
blender.exe         :0x00007FF6FD241B90  drw_engines_cache_populate
blender.exe         :0x00007FF6FD23E2E0  DRW_draw_render_loop_ex
blender.exe         :0x00007FF6FD23F3B0  DRW_draw_view
blender.exe         :0x00007FF6FDBA6F20  view3d_main_region_draw
blender.exe         :0x00007FF6FD54D1D0  ED_region_do_draw
blender.exe         :0x00007FF6FD145DE0  wm_draw_window_offscreen
blender.exe         :0x00007FF6FD145C30  wm_draw_window
blender.exe         :0x00007FF6FD145730  wm_draw_update
blender.exe         :0x00007FF6FD11FE30  WM_main
blender.exe         :0x00007FF6FCD803C0  main
blender.exe         :0x00007FF70244E824  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FF9F3137020  BaseThreadInitThunk
ntdll.dll           :0x00007FF9F36E2630  RtlUserThreadStart
**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce RTX 2080 (I also tested on my laptop with a worse graphics card, same issue happened so I've deemed the system to not be the issue) **Blender Version** Broken: 3.1.0 (commit c77597cd0e15?) **Short description and steps to reproduce the error** Crash on select in Edit Mode, with X-Ray on, Subdiv Surface Modifier (with On Cage), and Mirror Modifier **Steps to Reproduce** - Open Blender - Delete default objects (camera, light, cube) to have an empty scene (I could also reproduce the bug with this scene by applying things on the cube, but the simpler the better) - Shift-A -> Mesh -> Plane (to create new object) - Add modifier -> Mirror - Add modifier -> Subdivision Surface - Activate "OnCage" for Subdivision Surface modifier - Go to Edit Mode (Tab) - Activate X-Ray (Alt-Z) - Click anywhere in the view, and see Blender closing without warning/error. Note that Blender was *not* crashing in any of these instances: - Mirror modifier is after Subdivision Surface modifier - OnCage was not activated for Subdivision Surface modifier - I was in Object Mode - X-Ray was disabled I saved a simple project, if I try to click in the view after opening it, Blender will crash. But right after I saved it (as new project), it was not crashing (it did once I re-opened it, or when I simply hit Ctrl-S). [Crashing project.blend](https://archive.blender.org/developer/F12921645/Crashing_project.blend) Found in my temp folder: [blender.crash.txt](https://archive.blender.org/developer/F12921644/blender.crash.txt) ``` Stack trace: blender.exe :0x00007FF6FD2C5640 mesh_render_data_face_flag blender.exe :0x00007FF6FD2CD8F0 blender::draw::extract_edit_data_iter_subdiv_bm blender.exe :0x00007FF6FD288120 blender::draw::mesh_buffer_cache_create_requested_subdiv blender.exe :0x00007FF6FD2439D0 draw_subdiv_create_requested_buffers blender.exe :0x00007FF6FD244850 DRW_create_subdivision blender.exe :0x00007FF6FD270EC0 DRW_mesh_batch_cache_create_requested blender.exe :0x00007FF6FD267C30 drw_batch_cache_generate_requested blender.exe :0x00007FF6FD241B90 drw_engines_cache_populate blender.exe :0x00007FF6FD23E2E0 DRW_draw_render_loop_ex blender.exe :0x00007FF6FD23F3B0 DRW_draw_view blender.exe :0x00007FF6FDBA6F20 view3d_main_region_draw blender.exe :0x00007FF6FD54D1D0 ED_region_do_draw blender.exe :0x00007FF6FD145DE0 wm_draw_window_offscreen blender.exe :0x00007FF6FD145C30 wm_draw_window blender.exe :0x00007FF6FD145730 wm_draw_update blender.exe :0x00007FF6FD11FE30 WM_main blender.exe :0x00007FF6FCD803C0 main blender.exe :0x00007FF70244E824 __scrt_common_main_seh KERNEL32.DLL :0x00007FF9F3137020 BaseThreadInitThunk ntdll.dll :0x00007FF9F36E2630 RtlUserThreadStart ```

Added subscriber: @Jagage

Added subscriber: @Jagage

#98732 was marked as duplicate of this issue

#98732 was marked as duplicate of this issue

#97376 was marked as duplicate of this issue

#97376 was marked as duplicate of this issue

#97211 was marked as duplicate of this issue

#97211 was marked as duplicate of this issue

#97228 was marked as duplicate of this issue

#97228 was marked as duplicate of this issue

#97128 was marked as duplicate of this issue

#97128 was marked as duplicate of this issue

#97130 was marked as duplicate of this issue

#97130 was marked as duplicate of this issue

#97078 was marked as duplicate of this issue

#97078 was marked as duplicate of this issue

#96938 was marked as duplicate of this issue

#96938 was marked as duplicate of this issue

#96806 was marked as duplicate of this issue

#96806 was marked as duplicate of this issue

#96857 was marked as duplicate of this issue

#96857 was marked as duplicate of this issue

#96859 was marked as duplicate of this issue

#96859 was marked as duplicate of this issue

#96805 was marked as duplicate of this issue

#96805 was marked as duplicate of this issue

#96797 was marked as duplicate of this issue

#96797 was marked as duplicate of this issue

#96803 was marked as duplicate of this issue

#96803 was marked as duplicate of this issue

#96785 was marked as duplicate of this issue

#96785 was marked as duplicate of this issue

#96768 was marked as duplicate of this issue

#96768 was marked as duplicate of this issue

#96766 was marked as duplicate of this issue

#96766 was marked as duplicate of this issue

#96700 was marked as duplicate of this issue

#96700 was marked as duplicate of this issue

#96638 was marked as duplicate of this issue

#96638 was marked as duplicate of this issue

#96695 was marked as duplicate of this issue

#96695 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Thanks for the detailed report. But I cannot reproduce this issue.

This problem must be related to the GPU subdivision that was recently implemented.
Please try disabling GPU subdivision in {nav Edit > Preferences > Viewport > Subdvision > GPU Subdvision}.
Captura de Tela 2022-03-11 às 19.41.24.png

Also try the latest daily build in https://builder.blender.org/download/

Thanks for the detailed report. But I cannot reproduce this issue. This problem must be related to the `GPU subdivision` that was recently implemented. Please try disabling `GPU subdivision` in {nav Edit > Preferences > Viewport > Subdvision > GPU Subdvision}. ![Captura de Tela 2022-03-11 às 19.41.24.png](https://archive.blender.org/developer/F12922043/Captura_de_Tela_2022-03-11_a_s_19.41.24.png) Also try the latest daily build in https://builder.blender.org/download/

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Yannick Grimault self-assigned this 2022-03-12 01:58:41 +01:00

Hello,
Thanks a lot for the hint, disabling GPU subdivision indeed fixed the issue, and re-enabling it makes it come back!!
Marking the issue as solved, feel free to re-open it if you want to investigate further why that is the case.

Have a nice weekend!

Hello, Thanks a lot for the hint, disabling GPU subdivision indeed fixed the issue, and re-enabling it makes it come back!! Marking the issue as solved, feel free to re-open it if you want to investigate further why that is the case. Have a nice weekend!
Member

Added subscribers: @kevindietrich, @PratikPB2123

Added subscribers: @kevindietrich, @PratikPB2123
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

I can still reproduce the crash on latest master. So reopening the task.
cc @kevindietrich

I can still reproduce the crash on latest master. So reopening the task. cc @kevindietrich
Yannick Grimault was unassigned by Pratik Borhade 2022-03-17 12:11:33 +01:00
Member

Added subscriber: @Mewkowi

Added subscriber: @Mewkowi
Pratik Borhade changed title from Crash on select in Edit Mode, with X-Ray on, Subdiv Surface Modifier (with On Cage), and Mirror Modifier to GPU subdivision: Crash on select in Edit Mode with X-Ray on and Mirror Modifier 2022-03-22 04:45:33 +01:00

Added subscribers: @ritishk124, @deadpin

Added subscribers: @ritishk124, @deadpin
Member

Added subscriber: @Dis_artster

Added subscriber: @Dis_artster
Member

Added subscriber: @AnityEx

Added subscriber: @AnityEx
Member

Added subscriber: @sid1944

Added subscriber: @sid1944

Added subscriber: @andyb0y

Added subscriber: @andyb0y

Added subscriber: @Rui-Liu

Added subscriber: @Rui-Liu

Added subscriber: @(Deleted)

Added subscriber: @(Deleted)
Member

Added subscriber: @1936403010

Added subscriber: @1936403010

Added subscriber: @Valerio14

Added subscriber: @Valerio14

This issue was referenced by f88646a1ed

This issue was referenced by f88646a1edcc69f216e59ee54d8555f7e3e2c9c6

This issue was referenced by ba28c10199

This issue was referenced by ba28c10199b363df469cf70f2e9436be90deb258

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-03-30 17:34:02 +02:00
Member

Added subscribers: @Nitya028, @YAFU

Added subscribers: @Nitya028, @YAFU
Member

Added subscriber: @rhysowen9

Added subscriber: @rhysowen9

Added subscribers: @IrinelleLuar, @iss

Added subscribers: @IrinelleLuar, @iss
Member

Added subscriber: @Grizzzly

Added subscriber: @Grizzzly
Member

Added subscriber: @Dimension_JRC

Added subscriber: @Dimension_JRC
Member

Added subscribers: @Sky27, @LazyDodo

Added subscribers: @Sky27, @LazyDodo
Member

Added subscriber: @Starcat

Added subscriber: @Starcat
Member

Added subscriber: @Matrepied

Added subscriber: @Matrepied
Member

Added subscriber: @total_legend

Added subscriber: @total_legend
Member

Added subscribers: @herubi, @OmarEmaraDev

Added subscribers: @herubi, @OmarEmaraDev
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96344
No description provided.